[gd_scene load_steps=15 format=3 uid="uid://cm5tbhnfgibkd"]

[ext_resource type="Script" path="res://flamethrower.gd" id="1_o0mje"]
[ext_resource type="Texture2D" uid="uid://bbrt3eajx3p1s" path="res://Asset/Particles/Particle FX 1.3 Free/Spritesheets/Flamethrower-Sheet.png" id="2_7wuaj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u8wbv"]
atlas = ExtResource("2_7wuaj")
region = Rect2(0, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_85xpi"]
atlas = ExtResource("2_7wuaj")
region = Rect2(96, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3of65"]
atlas = ExtResource("2_7wuaj")
region = Rect2(192, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqel7"]
atlas = ExtResource("2_7wuaj")
region = Rect2(0, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f33f"]
atlas = ExtResource("2_7wuaj")
region = Rect2(96, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue50j"]
atlas = ExtResource("2_7wuaj")
region = Rect2(192, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k017"]
atlas = ExtResource("2_7wuaj")
region = Rect2(0, 96, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ael17"]
atlas = ExtResource("2_7wuaj")
region = Rect2(96, 96, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhtbn"]
atlas = ExtResource("2_7wuaj")
region = Rect2(192, 96, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g5p7"]
atlas = ExtResource("2_7wuaj")
region = Rect2(0, 144, 96, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_gg7hc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8wbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85xpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3of65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqel7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f33f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue50j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k017")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ael17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhtbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g5p7")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtvio"]
size = Vector2(71, 20)

[node name="Flame" type="Area2D"]
script = ExtResource("1_o0mje")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_gg7hc")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_wtvio")

[node name="AttackTimer" type="Timer" parent="."]

[node name="ImmuneTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_weapon_hitbox_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_weapon_hitbox_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ImmuneTimer" to="." method="_on_immune_timer_timeout"]
